# state-machine

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  event.hh  state_machine.hh  state_transition.hh
examples/: CMakeLists.txt
examples/vendingmachine/: CMakeLists.txt  main.cc
